<resources>
    <!--<string name="app_name">TimeClock4</string>-->
    <string name="app_name_final">VTime</string>
    <string name="company">Official Dicky</string>

    <string name="app">App</string>
    <string name="home">Home</string>
    <string name="listing">Listing</string>
    <string name="menu">Menu</string>
    <string name="build_type_icon">Build Type Icon</string>
    <string name="overview">Overview</string>
    <string name="attendance">Attendance</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="this_week">This Week</string>
    <string name="week">Week</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="save">Save</string>
    <string name="pause">Pause</string>
    <string name="cancel">Cancel</string>
    <string name="resume">Resume</string>
    <string name="note">Note</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="today">Today</string>

    <!-- Week Strings -->
    <string name="monday_short">Mo</string>
    <string name="tuesday_short">Tu</string>
    <string name="wednesday_short">We</string>
    <string name="thursday_short">Th</string>
    <string name="friday_short">Fr</string>
    <string name="saturday_short">Sa</string>
    <string name="sunday_short">Su</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="hour_short">h</string>
    <string name="days">Days</string>


    <string name="clock_out_question">Do You Want To Clock Out?</string>
    <string name="clock_out">Clock Out</string>
    <string name="abort">Abort</string>
    <string name="set_start_time">Select Your Start Time</string>
    <string name="settings">Settings</string>
    <string name="dev_settings">Developer Settings</string>
    <string name="about">About</string>
    <string name="working_time_title">Working Time</string>
    <string name="working_time_summary">Daily Target, Break Time, Flextime Account</string>
    <string name="time_settings">Time Settings</string>
    <string name="version">Version</string>
    <string name="no_update_found">You are already running the latest Version</string>
    <string name="update_found">A newer Version was found on Github</string>


    <string name="work_time_per_day">Work Time per Day</string>
    <string name="work_time_per_week">Work Time Per Week</string>
    <string name="pause_time">Pause Time</string>
    <string name="flex_time_account">Flextime Account</string>
    <string name="vacation">Vacation</string>
    <string name="copyright_notice">Copyright © 2020</string>
    <string name="build_variant">Build Variant</string>
    <string name="application_id">Application ID</string>
    <string name="check_for_updates">Check for Updates</string>
    <string name="contact_us">Contact Us</string>
    <string name="share">Share</string>
    <string name="share_summary">Check out this beautiful Time Tracking App</string>
    <string name="support_development">Support Development</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="changelog">Changelog</string>
    <string name="feedback">Feedback</string>
    <string name="development">Development</string>
    <string name="report_bug">Report a Bug</string>
    <string name="terms_service">Terms of Service</string>
    <string name="privacy_legal">Privacy &amp; Legal</string>
    <string name="third_party_libraries">Third Party Libraries</string>


    <string name="absence_type">Absence Type</string>
</resources>
