<?xml version="1.0" encoding="utf-8"?>
<com.yarolegovich.mp.MaterialPreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="24dp"
    tools:context="com.studio.timeclock4.fragments.TimeSettingsFragment">

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/working_time"
            android:layout_marginVertical="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Arbeitszeit pro Tag" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/working_time_week"
            android:layout_marginVertical="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:hint="Arbeitszeit pro Woche" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pause_time"
            android:layout_marginVertical="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="Pausenzeit" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/flex_account"
            android:layout_marginVertical="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="Gleitzeitkonto" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/vacation"
            android:layout_marginVertical="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="Urlaub" />
    </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.chip.Chip
                app:chipBackgroundColor="@color/bg_chip_state_list"
                android:checkable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monday"/>

            <com.google.android.material.chip.Chip
                app:chipBackgroundColor="@color/bg_chip_state_list"
                android:checkable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tuesday"/>

            <com.google.android.material.chip.Chip
                app:chipBackgroundColor="@color/bg_chip_state_list"
                android:checkable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wednesday"/>

            <com.google.android.material.chip.Chip
                app:chipBackgroundColor="@color/bg_chip_state_list"
                android:checkable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thursday"/>

            <com.google.android.material.chip.Chip
                app:chipBackgroundColor="@color/bg_chip_state_list"
                android:checkable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friday"/>

            <com.google.android.material.chip.Chip
                app:chipBackgroundColor="@color/bg_chip_state_list"
                android:checkable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saturday"/>

            <com.google.android.material.chip.Chip
                app:chipBackgroundColor="@color/bg_chip_state_list"
                android:checkable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunday"/>

        </com.google.android.material.chip.ChipGroup>

</com.yarolegovich.mp.MaterialPreferenceScreen>
