<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/lightWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        tools:text="24. März 2020"
        app:layout_constraintBottom_toTopOf="@+id/workTimeString"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/workTimeString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="64sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontalCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="5:12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalCenter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".45" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/startCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="64dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontalCenter">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingVertical="12dp"
            android:paddingStart="12dp"
            android:text="@string/start">

        </TextView>

        <TextView
            android:id="@+id/startTimeString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:paddingVertical="12dp"
            android:paddingEnd="12dp"
            android:text="7 Uhr 25 Min."/>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/endCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="64dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintTop_toBottomOf="@+id/startCard"
        tools:layout_editor_absoluteX="64dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingVertical="12dp"
            android:paddingStart="12dp"
            android:text="@string/stop">

        </TextView>

        <TextView
            android:id="@+id/endTimeString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:paddingVertical="12dp"
            android:paddingEnd="12dp"
            android:text="15 Uhr 25 Min.">

        </TextView>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/pauseCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="64dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="12dp"
        app:layout_constraintTop_toBottomOf="@+id/endCard"
        tools:layout_editor_absoluteX="64dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:paddingVertical="12dp"
            android:paddingStart="12dp"
            android:text="@string/pause">

        </TextView>

        <TextView
            android:id="@+id/pauseTimeString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:paddingVertical="12dp"
            android:paddingEnd="12dp"
            android:text="45 Min.">

        </TextView>

    </com.google.android.material.card.MaterialCardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/cancelBtn"
        app:layout_constraintTop_toBottomOf="@+id/pauseCard"
        android:layout_marginHorizontal="64dp"
        android:layout_marginVertical="24dp"
        >

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/noteCard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="8dp">

            <EditText
                android:id="@+id/noteString"
                android:layout_margin="4dp"
                android:gravity="center|top"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/note"/>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:id="@+id/saveBtn"
        android:paddingVertical="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:id="@+id/cancelBtn"
        android:paddingVertical="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/saveBtn" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:id="@+id/deleteBtn"
        android:paddingVertical="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="8dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>