<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_pink"
    tools:context="com.studio.timeclock4.fragments.ListingOuterFragment">

    <ViewStub
        android:id="@+id/viewStub"
        android:layout="@layout/action_add_workday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ext_week"
        android:background="@color/light_pink"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingHorizontal="6dp"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/monday_btn"
            style="@style/DayButton"
            android:text="@string/monday_short"
            app:cornerRadius="8dp"
            android:textColor="@color/red"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toStartOf="@+id/tuesday_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tuesday_btn"
            style="@style/DayButton"
            android:text="@string/tuesday_short"
            app:cornerRadius="8dp"
            android:textColor="@color/red"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toStartOf="@+id/wednesday_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/monday_btn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/wednesday_btn"
            style="@style/DayButton"
            android:text="@string/wednesday_short"
            app:cornerRadius="8dp"
            android:textColor="@color/red"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toStartOf="@+id/thursday_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tuesday_btn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/thursday_btn"
            style="@style/DayButton"
            android:text="@string/thursday_short"
            app:cornerRadius="8dp"
            android:textColor="@color/red"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toStartOf="@+id/friday_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/wednesday_btn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/friday_btn"
            style="@style/DayButton"
            android:text="@string/friday_short"
            app:cornerRadius="8dp"
            android:textColor="@color/red"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toStartOf="@+id/saturday_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/thursday_btn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saturday_btn"
            style="@style/DayButton"
            android:text="@string/saturday_short"
            app:cornerRadius="8dp"
            android:textColor="@color/red"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toStartOf="@+id/sunday_btn"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/friday_btn" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sunday_btn"
            style="@style/DayButton"
            android:text="@string/sunday_short"
            app:cornerRadius="8dp"
            android:textColor="@color/red"
            app:layout_constraintDimensionRatio="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/saturday_btn" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginHorizontal="2dp"
        android:id="@+id/ext_day"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/gradient"

        android:paddingHorizontal="42dp"
        android:paddingTop="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ext_week"
        app:layout_constraintVertical_bias="0.0">


        <TextView
            android:id="@+id/day_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:paddingTop="4dp"
            android:text="Monday"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/date_full_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="03. March 2019"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/day_text"
            app:layout_constraintTop_toBottomOf="@+id/day_text" />

        <TextView
            android:id="@+id/day_balance_current_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:text="8H. 35min"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/day_balance_remaining_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-5 H. 50 Min."
            android:textColor="@color/pink"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/day_balance_current_text"
            app:layout_constraintTop_toBottomOf="@+id/day_balance_current_text" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginVertical="12dp"
            android:background="@color/light_grey"
            app:layout_constraintTop_toBottomOf="@id/date_full_text">

        </View>

        <TextView
            android:id="@+id/start_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Start"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/starttime_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <TextView
            android:id="@+id/starttime_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="6:25"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/start_string"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <TextView
            android:id="@+id/end_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="End"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/start_string"
            app:layout_constraintTop_toBottomOf="@id/start_string" />

        <TextView
            android:id="@+id/break_string"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="Break"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/end_string"
            app:layout_constraintTop_toBottomOf="@id/end_string" />


        <TextView
            android:id="@+id/endtime_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="16:12"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/starttime_text"
            app:layout_constraintTop_toBottomOf="@+id/starttime_text" />

        <TextView
            android:id="@+id/breaktime_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="0:45"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/endtime_text"
            app:layout_constraintTop_toBottomOf="@+id/endtime_text" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineHorizontalCenter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".6" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginVertical="24dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/selector"
            app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontalCenter"
            app:layout_constraintEnd_toStartOf="@+id/edit_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/break_string"
            app:layout_constraintVertical_bias="0.5">

            <TextView
                android:id="@+id/note_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Note..."
                android:padding="14dp"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow_expand_all"
                android:tint="@color/blue_grey"
                android:paddingEnd="4dp"
                android:scaleX="0.7"
                android:scaleY="0.7"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit_btn"
            style="@style/DayButton"
            android:layout_width="56dp"
            android:layout_height="64dp"
            app:cornerRadius="16dp"
            android:gravity="center_vertical|start"
            android:backgroundTint="@color/light_grey"
            app:iconTint="@color/blue_grey"
            app:icon="@drawable/ic_circle_edit_outline"
            app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>